CRUD employe OK without gestion d'erreur
